some styling on all pages

--- a/todo
+++ b/todo
@@ -1,12 +1,12 @@
-do poprawy na iphone i mobilkach
+do poprawy na iphone i mobilkach - DONE
 
 galeria z przyciskami, byc moze slidery
-główne menu, font-size: larger,   font-weight: bold;
-wszystko wyjustowane
-marginesy na warkot.html na rowno z obrazkiem
-marginesy na oferta.html na rowno z obrazkiem
-usuwać wszystkie buzki
-wyśrodkować wertykalnie prawy tekst na ekranie oferta.html
+główne menu, font-size: larger,   font-weight: bold; DONE
+wszystko wyjustowane - DONE
+marginesy na warkot.html na rowno z obrazkiem - DONE
+marginesy na oferta.html na rowno z obrazkiem - DONE
+usuwać wszystkie buzki - DONE
+wyśrodkować wertykalnie prawy tekst na ekranie oferta.html - DONE
 
 
-o co chodzi z domenami dopytać o domene i hosting
+o co chodzi z domenami dopytać o domene i hosting - DONE
