--- a/todo
+++ b/todo
@@ -10,3 +10,40 @@ wyśrodkować wertykalnie prawy tekst na ekranie oferta.html - DONE
 
 
 o co chodzi z domenami dopytać o domene i hosting - DONE
+
+wymyślić i uzupełnić znacznik <tittle> na stronach i podstronach
+
+drukowanymi opisy w sekcji motocykle
+
+wyłaczyć wyświetlanie youtube
+
+na tabletach wywalic motorek na kontakcie
+
+
+Moje spostszerzenia ( do poprawki )
+Mobilka ( 363 x 797 )
+  warkot.html -
+    dwa ostatnie obrazki mają lewe paddingi
+    tekst musi byc wiekszy
+  motocykle.html -
+    marginesy pionowe pomiędzy motocyklami
+
+  O_nas.html -
+    odstęp pomiędzy drugim i trzecim obrazkiem
+    wielkosc testkow
+
+  Oferta.html -
+    wielkosc tekstow
+
+  Kontakt.html -
+    odstępy pomiędzy kontaktami
+
+Tablet pion( 800 x 1280)
+
+Tablet poziom(1280 x 800)
+
+Laptop 13 cali (1280 x 720)
+
+Laptop 15 cali (1366 x 768)
+
+Monitor 23 cale (1920 x 1080)
