cleaning and removing flex layout

--- a/todo
+++ b/todo
@@ -55,6 +55,12 @@ Tablet pion( 800 x 1280)
 
 
 Tablet poziom(1280 x 800)
+  warkot.html
+    wielkosc fontu
+  o_nas
+    wielkosc fontu
+  oferta.html
+    wielkosc fontu
 
 Laptop 13 cali (1280 x 720)
 
